tests/negative/test_decl_unty_bad_type.orb
fnc main() {
    f32 x = "abc";
}